corrected z-index for pop-up

--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -216,20 +216,20 @@ body::after {
 }
 
 .tabs-popup__title-thumb.tabs1 {
-  background-image: url(../../img/tabs-popup-disabled.png);
+  background-image: url(../img/tabs-popup-disabled.png);
 }
 @media (min-width: $tablet) {
   .tabs-popup__title-thumb.tabs1 {
-    background-image: url(../../img/tabs-popup-disabled-pc.png);
+    background-image: url(../img/tabs-popup-disabled-pc.png);
   }
 }
 
 .tabs-popup__title-thumb.tabs2 {
-  background-image: url(../../img/tabs-popup-disabled-2.png);
+  background-image: url(../img/tabs-popup-disabled-2.png);
 }
 @media (min-width: $tablet) {
   .tabs-popup__title-thumb.tabs2 {
-    background-image: url(../../img/tabs-popup-disabled-2-pc.png);
+    background-image: url(../img/tabs-popup-disabled-2-pc.png);
   }
 }
 
@@ -240,13 +240,13 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../../img/tabs-popup.png);
+  background-image: url(../img/tabs-popup.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
 @media (min-width: $tablet) {
   .tabs-popup__title._tab-active > .tabs-popup__title-thumb.tabs1::after {
-    background-image: url(../../img/tabs-popup-pc.png);
+    background-image: url(../img/tabs-popup-pc.png);
   }
 }
 
@@ -257,13 +257,13 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../../img/tabs-popup-2.png);
+  background-image: url(../img/tabs-popup-2.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
 @media (min-width: $tablet) {
   .tabs-popup__title._tab-active > .tabs-popup__title-thumb.tabs2::after {
-    background-image: url(../../img/tabs-popup-2-pc.png);
+    background-image: url(../img/tabs-popup-2-pc.png);
   }
 }
 
